starting to add UI

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Rock, Scissors, and Paper Game</title>
 </head>
 <body>
+    <div class="selection">
+        <button class="select-button" id="button1"></button>
+        <button class="select-button" id="button2"></button>
+        <button class="select-button" id="button3"></button>
+    </div>
+    <div class="result">
+        
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
