--- a/index.html
+++ b/index.html
@@ -5,16 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Scissors, and Paper Game</title>
+    
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="selection">
         <button class="select-button" id="button1"></button>
         <button class="select-button" id="button2"></button>
         <button class="select-button" id="button3"></button>
     </div>
+
     <div class="result">
-        
+
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
