finishing element and plotting

--- a/index.html
+++ b/index.html
@@ -36,22 +36,36 @@
         </div>
 
         <div class="play-field">
-            <div class="buttons">
-                <button class="select-button" id="button1">
-                    <img src="images/fist.svg" alt="rock-hand">
-                </button>
-                <button class="select-button" id="button2">
-                    <img src="images/release.svg" alt="paper-hand">
-                </button>
-                <button class="select-button" id="button3">
-                    <img src="images/peace.svg" alt="scissors-hand">
-                </button>
+            <div class="player">
+                <div class="player-text">
+                    <p>
+                        PLAYER
+                    </p>
+                </div>
+                <div class="player-buttons">
+                    <button class="select-button" id="rock">
+                        <img src="images/fist.svg" alt="rock-hand">
+                    </button>
+                    <button class="select-button" id="paper">
+                        <img src="images/release.svg" alt="paper-hand">
+                    </button>
+                    <button class="select-button" id="scissors">
+                        <img src="images/peace.svg" alt="scissors-hand">
+                    </button>
+                </div>
             </div>
             <div class="battle">
                 <span>VS</span>
             </div>
-            <div class="computer-choose">
-
+            <div class="computer">
+                <div class="computer-buttons">
+                    
+                </div>
+                <div class="computer-text">
+                    <p>
+                        COMPUTER
+                    </p>
+                </div>
             </div>
         </div>
 
